High Contrast Critical CSS Fix

--- a/assets/css/preferences.css
+++ b/assets/css/preferences.css
@@ -15,8 +15,10 @@ body[data-contrast="highcontrast"], body[data-luminosity="dim"] {
   background: #202124;
   color: white; }
   body[data-contrast="highcontrast"] *, body[data-luminosity="dim"] * {
-    background: transparent !important;
+    background: transparent;
     color: inherit !important; }
+  body[data-contrast="highcontrast"] .container, body[data-contrast="highcontrast"] #cell-grid > *, body[data-contrast="highcontrast"] #stage td, body[data-luminosity="dim"] .container, body[data-luminosity="dim"] #cell-grid > *, body[data-luminosity="dim"] #stage td {
+    background: transparent; }
   body[data-contrast="highcontrast"] .widget, body[data-luminosity="dim"] .widget {
     background: #161719 !important; }
 
